Updated docker sample to be memory-friendly